--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample</title>
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+        @layer utilities{
+            .content-auto{
+                content-visibility: none;
+            }
+        }
+    </style>
 </head>
 <style>
     #item{
@@ -24,7 +34,7 @@
 </style>
 <body>
     <h1>Sample Drag Element</h1>
-    <p>drag element below</p>
+    <p class="lg:content-auto">drag element below</p>
 
     <div id="item">
         <div id="itemheader">
